--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_sign_in: ^3.0.4
-  firebase_core: ^0.2.5 
-  firebase_auth: ^0.6.6
-  http: ^0.12.0+2
+  google_sign_in: '>=4.0.1+3'
+  firebase_core: '>=0.4.0+1'
+  firebase_auth: '>=0.11.1'
+  http: 0.12.0+2
+  rxdart: '>=0.22.0'
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
