--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   firebase_auth: '>=0.11.1'
   http: 0.12.0+2
   rxdart: '>=0.22.0'
+  flutter_auth_buttons: '>=0.5.0'
+  signalr_client: '>=0.1.5'
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
