--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,10 +22,12 @@ dependencies:
   google_sign_in: '>=4.0.1+3'
   firebase_core: '>=0.4.0+1'
   firebase_auth: '>=0.11.1'
-  http: 0.12.0+2
+  firebase_messaging: '>=5.0.1+1'
   rxdart: '>=0.22.0'
-  flutter_auth_buttons: '>=0.5.0'
   signalr_client: '>=0.1.5'
+  flutter_auth_buttons: '0.5.0'
+  simple_animations: '>=1.3.0'
+  http: 0.12.0+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
